added test data for map to simulate long term use